--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <header id="titlebar" class="header">
-        <svg width="100%" height="50" fill="#000000" class="header__logo">
-            <image href="/illustrations/neted_logo.png" x="65" y="-45" width="150"></image>
-        </svg>
+        <div class="header__logo">
+            <img src="/illustrations/neted_logo.png" alt="">
+        </div>
         <!-- <svg width="26" height="26" viewBox="0 0 67 26" fill="none" class="header__hamburger">
             <line x1="0" y1="3.5" x2="66" y2="3.5" stroke="black" stroke-width="6" />
             <line x1="0" y1="20.5" x2="66" y2="20.5" stroke="black" stroke-width="6" />
