--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <i class="fas fa-chevron-up"></i>
             <span>Menu</span>
         </div>
+        <!-- <div class="header__home">Home</div> -->
         <nav class="header__navbar header__navbar_hide">
             <div class="header__close">&times;</div>
             <ul class="header__menu">
@@ -34,7 +35,7 @@
     </header>
     <main class="main">
         <section class="landing">
-            <p class="landing__valueprop">Kids unpack the hidden code of reality using Network Science</p>
+            <p class="landing__valueprop">Our mission is to help kids discover the hidden interconnectedness of the world using Network Science</p>
             <div class="landing__cta">
                 <svg width="30" height="30" viewBox="0 0 79 79" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <circle cx="39.5" cy="39.5" r="39" stroke="#03243C" />
@@ -43,8 +44,8 @@
             </div>
         </section>
         <section class="intro pagebg">
-            <p class="intro__text">NetworkED is an open education initiative that develops a robust evidence-based toolbox which equips children to embrace
-                real-world complexity and a network-oriented worldview through fun experiences and a global community of practice.</p>
+            <p class="intro__text">NetworkED is an initiative that develops a robus <b>evidence based toolbox</b> to gain insights about <b>real-world complexity</b>
+            through fun experiences</p>
 
             <div class="intro__image">
                 <img src="/illustrations/stargazer.png" alt="Image of a star gazing kid">
@@ -63,6 +64,7 @@
                     <img src="/illustrations/balloon.png" alt="People holding balloons">
                 </div>
             </div>
+            <h3 class="about__us subheaders">About Us</h3>
             <div class="about__text pagebg">
                 <p>We’re a community of passionate researchers, educators and industry mentors with a common interest to introduce networks
                 to kids across different countries. The goal of the community is to create a thriving ecosystem for the torchbearers of
@@ -80,7 +82,7 @@
                 </div>
                 <div class="about__circle about__circle3">
                     <img src="/illustrations/inf3.png" alt="">
-                    <p>Professional development in network thinking</p>
+                    <p>Professional development</p>
                 </div>
                 <div class="about__circle about__circle4">
                     <img src="/illustrations/inf4.png" alt="">
@@ -101,6 +103,7 @@
             </div>
         </section>
         <section class="approach pagebg">
+            <h3 class="approach__header subheaders">Our Approach</h3>
             <div class="approach__details">
                 <div class="approach__about">
                     <p>Every year, NetworkED hosts a short term fellowship program which orients and equips children with tools to explore
@@ -114,7 +117,7 @@
                     children.</p>
                 </div>
                 <div class="approach__banner">
-                    <p>Coming soon NetworkED 2021! Season #1 Social Sleuths</p>
+                    <p>Coming soon</p> <h3>NetworkED 2021!</h3> <p>Season #1 Social Sleuths</p>
                 </div>
             </div>
             <div class="approach__seasons">
@@ -137,6 +140,7 @@
             </div>
         </section>
         <section class="netscience">
+            <h3 class="subheaders">What is NETWORK SCIENCE?</h3>
             <div class="netscience__text">
                 <h4>Network Science is the study of patterns of connections in the real world</h4>
                 <p>It is an emerging science which provides a
@@ -181,7 +185,7 @@
                     <h5>Social</h5>
                     <p>interactions between people (eg. Facebook, group behaviour)</p>
                 </div>
-                <button class="cta__btn">Join Us!</button>
+                <button class="cta__btn"><i class="fab fa-slack"></i>Join Us!</button>
             </div>
         </section>
         <footer class="footer">
