changes to animation

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main class="main">
         <section class="landing">
             <div id="particles-js" class="landing__bg"></div>
-                <p class="landing__valueprop"><span class="landing__valueprop_span1">Our mission</span><br>is to help<br><span class="landing__valueprop_span2">kids discover</span><br>the hidden<br>interconnectedness<br>of the world using<br><span class="landing__valueprop_span3">Network Science</span></p>
+                <p class="landing__valueprop"><span class="landing__valueprop_span1">Our mission</span><br>is to help<br><span class="landing__valueprop_span2">kids discover</span><br>the hidden<br>interconnectedness<br>of our world using<br><span class="landing__valueprop_span3">Network Science</span></p>
                 <div class="landing__cta">
                     <svg width="30" height="30" viewBox="0 0 79 79" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <circle cx="39.5" cy="39.5" r="39" stroke="#03243C" />
