styling of desktop version

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main class="main">
         <section class="landing">
             <div id="particles-js" class="landing__bg"></div>
-                <p class="landing__valueprop"><span class="landing__valueprop_span1">Our mission</span><br>is to help<br><span class="landing__valueprop_span2">kids discover</span><br>the hidden<br>interconnectedness<br>of our world using<br><span class="landing__valueprop_span3">Network Science</span></p>
+                <div class="landing__valueprop"><p><span class="landing__valueprop_span1">Our mission</span><br>is to help<br><span class="landing__valueprop_span2">kids discover</span><br>the hidden<br>interconnectedness<br>of our world using<br><span class="landing__valueprop_span3">Network Science</span></p></div>
                 <div class="landing__cta">
                     <svg width="30" height="30" viewBox="0 0 79 79" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <circle cx="39.5" cy="39.5" r="39" stroke="#03243C" />
@@ -49,7 +49,7 @@
             </div>
             <button class="cta__btn">Join Us!</button>
         </section>
-        <section class="about">
+        <section class="about pagebg">
             <div class="about__hero">
                 <blockquote>
                     “Life is at base a network.<br>
@@ -62,13 +62,13 @@
                 </div>
             </div>
             <h3 class="about__us subheaders">About Us</h3>
-            <div class="about__text pagebg">
+            <div class="about__text">
                 <p>We’re a community of passionate researchers, educators and industry mentors with a common interest to introduce networks
                 to kids across different countries. The goal of the community is to create a thriving ecosystem for the torchbearers of
                 network thinking, who share best practices on methods, tools and pains of demystifying complexity for kids.</p>
                 <button class="cta__btn">Join Us</button>
             </div>
-            <div class="about__items pagebg">
+            <div class="about__items">
                 <div class="about__circle about__circle1">
                     <img src="/illustrations/inf1.png" alt="">
                     <p>Domain Expertise</p>
@@ -129,7 +129,7 @@
                     <img src="/illustrations/Group 171.png" alt="">
                 </div>
             </div>
-            <div class="approach__upcoming pagebg">
+            <div class="approach__upcoming">
                 <h3>Upcoming Seasons</h3>
                 <ul>
                     <li><i class="fas fa-lock"></i>Epidemic Intelligence Service</li>
