--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
             <div class="footer__inner inner">
                 <div class="footer__logo">
                     <a href="http://www.networked.in" class="header__logo">
-                        <img src="/illustrations/netEdLogo.png" alt="Logo of the organization">
+                        networkED.in
                     </a>
                 </div>
                 <div class="footer__contact">
@@ -366,17 +366,23 @@
                 </div>
                 <div class="footer__resource">
                     <h5>More</h5>
-                    <a href="https://blog.networked.in">Blog</a>
-                    <a href="#">Resources</a>
-                    <a href="#">Credit</a>
-                    <a href="#">Team</a>
+                    <ul>
+                        <li href="https://blog.networked.in">Blog</li>
+                        <li href="#">Resources</li>
+                        <li href="#">People</li>
+                        <li href="#">Credits</li>
+                    </ul>
+                    
                 </div>
                 <div class="footer__social">            
                     <h5>Follow Us</h5>
-                    <a href="">Twitter</a>                   
-                    <a href="">Facebook</a>             
-                    <a href="">Instagram</a>              
-                    <a href="">Linkedin</a>
+                    <ul>
+                        <li href="">Twitter</li>                   
+                        <li href="">Facebook</li>             
+                        <li href="">Instagram</li>              
+                        <li href="">Linkedin</li> 
+                    </ul>
+                    
                 </div>
                 <div class="footer__copy">
                     <p>&copy; <span></span> networkED. All rights reserved</p>
