updates to styling

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
                 
             </article>
             <article class="about__joinus inner">
+                <h3>Join Us</h3>
                 <form id="subscribe" class="about__subscribe">
                     <label for="visitor">Full Name</label>
                     <input type="text" name="visitor" required>
