--- a/index.html
+++ b/index.html
@@ -385,11 +385,11 @@
                 <div class="footer__social">            
                     <h5>Follow Us</h5>
                     <ul>
-                        <li><i class="fab fa-twitter-square"></i></li>                   
-                        <li><i class="fab fa-facebook-square"></i></li>             
-                        <li><i class="fab fa-instagram-square"></i></li>              
-                        <li><i class="fab fa-linkedin"></i></li>
-                        <li><i class="fab fa-vimeo-square"></i></li>
+                        <li><i class="fab fa-twitter-square fa-2x"></i></li>                   
+                        <li><i class="fab fa-facebook-square fa-2x"></i></li>             
+                        <li><i class="fab fa-instagram-square fa-2x"></i></li>              
+                        <li><i class="fab fa-linkedin fa-2x"></i></li>
+                        <li><i class="fab fa-vimeo-square fa-2x"></i></li>
                     </ul>
                     
                 </div>
